# PyBolt-A-High-Performance-Python-Compiler

./: README.md
pybolt/: Cargo.toml
pybolt/docs/: README.md  design.md
pybolt/examples/: example1.py  example2.py
pybolt/src/: lib.rs  main.rs
pybolt/src/codegen/: codegen.rs  mod.rs
pybolt/src/ir/: ir.rs  mod.rs
pybolt/src/lexer/: lexer.rs  mod.rs
pybolt/src/optimizer/: mod.rs  optimizer.rs
pybolt/src/parser/: mod.rs  parser.rs
pybolt/src/runtime/: mod.rs  runtime.rs
pybolt/src/semantic/: mod.rs  semantic.rs
pybolt/tests/: codegen_tests.rs  lexer_tests.rs  optimizer_tests.rs  parser_tests.rs  runtime_tests.rs  semantic_tests.rs
