[package]
name = "pybolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
inkwell = "0.4.0"
llvm-sys = "181.0.0"
log = "0.4.21"
regex = "1.10.5"

[dev-dependencies]
criterion = "0.5.1"
